Thu Nov 01 10:54:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy SA work branch.

        === start changelog ===

        Mon Oct 31 13:14:04 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

                * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
                Add safe_servant_base in CIAO consumers servant


        Fri Oct 28 11:37:40 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

                * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
                Changes for removing activators for CIAO consumers

        Wed Oct 26 07:18:40 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

                * TAO_IDL/be/be_codegen.cpp:
                Remove include files for ciao servant- and port_activator.

                * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
                Changes for removing activators in CIAO

        === end changelog ===

Thu Oct 27 16:16:09 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/HostProcess.h:
        * utils/logWalker/HostProcess.cpp:
        * utils/logWalker/Log.cpp:

          Clean up treatment of connection closure and reuse of handles.

Thu Oct 27 12:13:40 UTC 2011  Simon Massey <sma at prismtech dot com>

        * tao/PI_Server/PI_Server_include.pidl:
        Was duplicating the tao/PortableServer/PortableServer_include.pidl
        #define guard name.

Tue Oct 25 08:10:00 UTC 2011  Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * tests/POA/On_Demand_Act_Direct_Coll/Client_Task.cpp:
        Solved error in destroying the orb.

Fri Oct 21 14:44:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IORManipulation/IORManipulation.mpc:
        * tao/IORTable/IORTable.mpc:
        * tao/ZIOP/ZIOP.mpc:
          Generate export files as part of the build

        * tao/IORManipulation/ior_manip_export.h:
        * tao/IORTable/iortable_export.h:
        * tao/ZIOP/ziop_export.h: